nginx/ingress-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer

  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx

  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP

    - name: https
      port: 443
      targetPort: https
      protocol: TCP
