nginx/nginx-NodePort.yaml
# Pod Definition
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx
spec:
  containers:
  - image: nginx:1.27.0-alpine
    name: nginx-container
    ports:
    - containerPort: 80
---
# Service Definition
apiVersion: v1
kind: Service
metadata:
  name: nginx-pod
  labels:
    app: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30000
